Update environment variables with new values

--- a/.env
+++ b/.env
@@ -1,6 +1,3 @@
-GEMINI_API_KEY=
-
-
-MONGODB_URI=
-# Nombre de la base de datos
-MONGODB_DB_NAME=
+GEMINI_API_KEY=Key
+MONGODB_URI=URLfromyourcluster/localhost
+MONGODB_DB_NAME=databasename
